--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Adrián Sabino Pérez - Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>👋 ¡Hola! Soy Adrián Sabino Pérez</h1>
+        <p>Técnico Superior en Desarrollo de Aplicaciones Multiplataforma | Fullstack Developer | Apasionado por la Ciberseguridad</p>
+    </header>
 
+    <section id="about">
+        <h2>Sobre mí</h2>
+        <p>Soy un desarrollador con pasión por el desarrollo Android 📱 y la seguridad informática 🔐. Me encanta aprender nuevas tecnologías y afrontar desafíos en el mundo del software.</p>
+    </section>
+
+    <section id="skills">
+        <h2>💡 Habilidades</h2>
+        <h3>Tech Skills:</h3>
+        <ul>
+            <li>Frontend: HTML, CSS, JavaScript</li>
+            <li>Backend: PHP, Node.js</li>
+            <li>Bases de Datos: MySQL, MongoDB, Firebase</li>
+            <li>Version Control: Git, GitHub</li>
+            <li>Desarrollo Móvil: Android (Kotlin), Flutter</li>
+            <li>Desarrollo de Juegos: Unity (C#)</li>
+        </ul>
+        <h3>Soft Skills:</h3>
+        <ul>
+            <li>Trabajo en equipo 🤝</li>
+            <li>Pensamiento crítico 🧠</li>
+            <li>Resolución de problemas 🚀</li>
+            <li>Adaptabilidad 🔄</li>
+        </ul>
+    </section>
+
+    <section id="contact">
+        <h2>📩 Contacto</h2>
+        <p>¡Conéctate conmigo!</p>
+        <a href="mailto:adrian.sabino@example.com">✉️ Email</a> |
+        <a href="https://www.linkedin.com/in/adrián-sabino-pérez-2b20a7278" target="_blank">🔗 LinkedIn</a> |
+        <a href="https://github.com/tuusuario" target="_blank">🐙 GitHub</a>
+    </section>
+
+    <footer>
+        <p>© 2024 Adrián Sabino Pérez | Desarrollado con 💙</p>
+    </footer>
+</body>
+</html>
