--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
     <section id="contact">
         <h2>📩 Contacto</h2>
         <p>¡Conéctate conmigo!</p>
-        <a href="mailto:adrian.sabino@example.com">✉️ Email</a> |
+        <a href="mailto:adrsabper@gmail.com.com">✉️ Email principal</a> |
+        <a href="mailto:adr16persab@gmail.com.com">✉️ Email secundario</a> |
         <a href="https://www.linkedin.com/in/adrián-sabino-pérez-2b20a7278" target="_blank">🔗 LinkedIn</a> |
-        <a href="https://github.com/tuusuario" target="_blank">🐙 GitHub</a>
+        <a href="https://github.com/adriSP16" target="_blank">🐙 GitHub</a>
     </section>
 
     <footer>
