--- a/index.html
+++ b/index.html
@@ -53,6 +53,92 @@
             </div>
         </section>
 
+
+        <!-- Sección de Proyectos -->
+        <section class="projects">
+            <div class="container">
+                <h2 class="projects-title">Proyectos</h2>
+                <p class="no-projects">Aún no hay proyectos destacables 😔</p>
+            </div>
+        </section>
+
+
+        <!-- Sección de Tech skills -->
+        <section id="skills" class="skills-section">
+            <h2 class="skills-title">Skills</h2>
+            <p class="skills-description">
+                I've been writing code since 2018, developing various personal projects while I'm self-taught in programming languages and frameworks. I've participated in national and international competitive programming events, winning a gold medal in the 2023 Provincial Contest. All of this has led me to possess the following skill stack:
+            </p>
+
+            <!-- Frontend -->
+            <div class="skill-category">
+                <h3>Frontend</h3>
+                <div class="skill-icons">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>Javascript</span>
+                </div>
+            </div>
+
+            <!-- Backend -->
+            <div class="skill-category">
+                <h3>Backend</h3>
+                <div class="skill-icons">
+                    <span>PHP</span>
+                </div>
+            </div>
+
+            <!-- Programming Languages -->
+            <div class="skill-category">
+                <h3>Programming Languages</h3>
+                <div class="skill-icons">
+                    <span>Kotlin</span>
+                    <span>Dart</span>
+                    <span>Python</span>
+                    <span>Java</span>
+                    <span>C#</span>
+                </div>
+            </div>
+
+            <!-- Databases -->
+            <div class="skill-category">
+                <h3>Databases</h3>
+                <div class="skill-icons">
+                    <span>MongoDB</span>
+                    <span>Firebase</span>
+                    <span>MySQL</span>
+                </div>
+            </div>
+
+            <!-- Version Control -->
+            <div class="skill-category">
+                <h3>Version Control</h3>
+                <div class="skill-icons">
+                    <span>Git</span>
+                    <span>GitHub</span>
+                </div>
+            </div>
+
+            <!-- Frameworks -->
+            <div class="skill-category">
+                <h3>Frameworks</h3>
+                <div class="skill-icons">
+                    <span>Flutter</span>
+                    <span>Jetpack Compose</span>
+                </div>
+            </div>
+
+            <!-- Other tecnologies -->
+            <div class="skill-category">
+                <h3>Other tecnologies</h3>
+                <div class="skill-icons">
+                    <span>Docker</span>
+                </div>
+            </div>
+        </section>
+
+          
+
         <!-- Popup de Contacto -->
         <div id="contact-popup" class="popup">
             <div class="popup-content">
@@ -91,7 +177,6 @@
                         </button>
                     </div>
                 </div>
-        
             </div>
         </div>
     </body>
